Sat Nov  5 23:46:03 2016  Tanaka Akira  <akr@fsij.org>

	* time.c (vtm_add_offset): Fix yday on last day of year.
	  [ruby-core:72878] [Bug #11994] Fixed by Andrew White.

Sat Nov  5 23:30:41 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/http.rb (Net::HTTP.post): new convenience method to send
	  a POST request.  [ruby-core:75484] [Feature #12375]

Sat Nov  5 23:03:54 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb (transport_request): other than HTTPContinue
	  in 1xx (HTTPInformation) also needs to continue. [Bug #12890]

Sat Nov  5 22:51:06 2016  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (make_time): "now" argument as nil works again.
	  This is broken since Ruby 2.2.
	  Mathieu Jobin pointed a problem.
	  https://github.com/ruby/ruby/commit/e4b05d91eb0d48fd172abf015c493bb42d755d07#commitcomment-17421387

Sat Nov  5 22:50:13 2016  Akinori MUSHA  <knu@iDaemons.org>

	* lib/ipaddr.rb (IPAddr#==): If coercion fails, return false
	  instead of passing through the exception. [ruby-core:77451]
	  [Bug #12799]

	* lib/ipaddr.rb (IPAddr#<=>): If coercion fails, return nil
	  instead of passing through the exception. [ruby-core:77451]
	  [Bug #12799]

Sat Nov  5 22:11:33 2016  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm_trace.c (tracepoint_attr_callee_id, rb_tracearg_callee_id):
	  add TracePoint#callee_id. [ruby-core:77241] [Feature #12747]

	* cont.c, eval.c, gc.c, include/ruby/intern.h, insns.def, thread.c,
	  vm.c, vm_backtrace.c, vm_core.h, vm_eval.c, vm_insnhelper.c, vm_trace.c: ditto.

	* test/ruby/test_settracefunc.rb: tests for above.

Sat Nov  5 22:09:48 2016  Kazuki Tsujimoto  <kazuki@callcc.net>

	* eval.c, method.h, proc.c, vm.c, vm_eval.c, vm_insnhelper.c, vm_method.c:
	  TracePoint#method_id should return method_id, not callee_id.
	  [ruby-core:77241] [Feature #12747]

	* test/ruby/test_settracefunc.rb: change accordingly.

Sat Nov  5 18:49:37 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
