@@ -1,3 +1,9 @@
+Sat Nov  5 23:48:27 2016  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* file.c (rb_home_dir_of): convert given username into filesystem
+	  encoding. [ruby-core:76682] [Bug #12652]
+	  patched by Dāvis Mosāns
+
 Sat Nov  5 23:46:03 2016  Tanaka Akira  <akr@fsij.org>
 
 	* time.c (vtm_add_offset): Fix yday on last day of year.
